--- a/app.ui
+++ b/app.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>424</height>
+    <width>490</width>
+    <height>444</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QComboBox" name="instrumentBox">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>190</x>
      <y>130</y>
      <width>104</width>
      <height>26</height>
@@ -51,7 +51,7 @@
   <widget class="QRadioButton" name="radioButtonEmotion1">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>150</x>
      <y>180</y>
      <width>100</width>
      <height>20</height>
@@ -64,7 +64,7 @@
   <widget class="QRadioButton" name="radioButtonEmotion2">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>270</x>
      <y>180</y>
      <width>100</width>
      <height>20</height>
@@ -77,7 +77,7 @@
   <widget class="QRadioButton" name="radioButtonEmotion3">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>80</x>
      <y>240</y>
      <width>100</width>
      <height>20</height>
@@ -90,10 +90,10 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>100</y>
-     <width>361</width>
-     <height>16</height>
+     <width>431</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="orientation">
@@ -103,10 +103,10 @@
   <widget class="Line" name="line_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>280</y>
-     <width>361</width>
-     <height>16</height>
+     <width>421</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="orientation">
@@ -116,7 +116,7 @@
   <widget class="QPushButton" name="recordButton">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>180</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -129,8 +129,8 @@
   <widget class="QPushButton" name="stopButton">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>370</y>
+     <x>180</x>
+     <y>360</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -142,7 +142,7 @@
   <widget class="QLabel" name="timeLabel">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>220</x>
      <y>300</y>
      <width>51</width>
      <height>20</height>
@@ -155,7 +155,7 @@
   <widget class="QPushButton" name="browseButton">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>180</x>
      <y>60</y>
      <width>141</width>
      <height>32</height>
@@ -168,20 +168,23 @@
   <widget class="QLabel" name="dirPath">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
+     <x>60</x>
+     <y>15</y>
      <width>361</width>
-     <height>16</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Select a directory for saving dataset</string>
    </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QRadioButton" name="radioButtonEmotion4">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>210</x>
      <y>240</y>
      <width>100</width>
      <height>20</height>
@@ -194,7 +197,7 @@
   <widget class="QRadioButton" name="radioButtonEmotion5">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>310</x>
      <y>240</y>
      <width>100</width>
      <height>20</height>
@@ -202,6 +205,22 @@
    </property>
    <property name="text">
     <string>Aggressive</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="promptLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>399</y>
+     <width>441</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
