--- a/app.ui
+++ b/app.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>485</width>
-    <height>510</height>
+    <height>583</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>191</y>
+     <y>261</y>
      <width>104</width>
      <height>26</height>
     </rect>
@@ -52,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>241</y>
+     <y>311</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -65,7 +65,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>241</y>
+     <y>311</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -78,7 +78,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>301</y>
+     <y>371</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -91,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>90</y>
+     <y>80</y>
      <width>431</width>
      <height>20</height>
     </rect>
@@ -117,7 +117,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>391</y>
+     <y>461</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -130,7 +130,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>421</y>
+     <y>491</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -143,7 +143,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>361</y>
+     <y>431</y>
      <width>51</width>
      <height>20</height>
     </rect>
@@ -156,7 +156,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>60</y>
+     <y>50</y>
      <width>141</width>
      <height>32</height>
     </rect>
@@ -169,7 +169,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>20</y>
+     <y>10</y>
      <width>361</width>
      <height>31</height>
     </rect>
@@ -185,7 +185,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>301</y>
+     <y>371</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -198,7 +198,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>301</y>
+     <y>371</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -211,7 +211,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>460</y>
+     <y>530</y>
      <width>441</width>
      <height>31</height>
     </rect>
@@ -227,7 +227,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>340</y>
+     <y>240</y>
      <width>431</width>
      <height>20</height>
     </rect>
@@ -250,13 +250,52 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>110</y>
+     <y>100</y>
      <width>361</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Select an audio device</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="Line" name="line_4">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>410</y>
+     <width>431</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="nameEdit">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>220</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="deviceChoices_2">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>180</y>
+     <width>361</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Type in your name</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
